// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`attributes.mdx format 1`] = `
====================================options=====================================
parsers: ["mdx"]
                                                      printWidth: 80 (default) |
=====================================input======================================
<Foo foo={{color:     'red'}}></Foo>
<Foo foo={{
color:     'red'}}></Foo>
<Foo foo={{color:    /** @type {'red'} */('red')}}></Foo>

=====================================output=====================================
<Foo foo={{ color: "red" }}></Foo>
<Foo
  foo={{
    color: "red",
  }}
></Foo>
<Foo foo={{ color: /** @type {'red'} */ ("red") }}></Foo>

================================================================================
`;

exports[`empty.mdx format 1`] = `
====================================options=====================================
parsers: ["mdx"]
                                                      printWidth: 80 (default) |
=====================================input======================================
<C
  a1
  a2=""
  a3=''
  a4=' '
  a4='&nbsp;'
/>

=====================================output=====================================
<C a1 a2="" a3="" a4=" " a4="&nbsp;" />

================================================================================
`;

exports[`encoded.mdx format 1`] = `
====================================options=====================================
parsers: ["mdx"]
                                                      printWidth: 80 (default) |
=====================================input======================================
<C
  a1="&amp;"
  a2="&gt;"
  a3="&amp;gt;"
/>

<C a="&lt;x&gt;" />

<C a="&amp;lt;" />

=====================================output=====================================
<C a1="&amp;" a2="&gt;" a3="&amp;gt;" />

<C a="&lt;x&gt;" />

<C a="&amp;lt;" />

================================================================================
`;

exports[`jsx-element.mdx format 1`] = `
====================================options=====================================
parsers: ["mdx"]
                                                      printWidth: 80 (default) |
=====================================input======================================
<!-- taken from https://github.com/facebook/docusaurus/blob/2632742a904b3bc71c97ee86f92f808a01f9b017/website/_dogfooding/_pages%20tests/code-block-tests.mdx#L191-L205 -->

<CodeBlock
  language="yaml"
  title={
    <div
      style={{
        display: 'flex',
        justifyContent: 'space-between',
        alignItems: 'center',
      }}>
      <span>
        <code>ReactNode</code> title
      </span>{' '}
      <span className="badge badge--primary">YAML</span>
    </div>
  }>
  abc
</CodeBlock>

=====================================output=====================================
<!-- taken from https://github.com/facebook/docusaurus/blob/2632742a904b3bc71c97ee86f92f808a01f9b017/website/_dogfooding/_pages%20tests/code-block-tests.mdx#L191-L205 -->

<CodeBlock
  language="yaml"
  title={
    <div
      style={{
        display: "flex",
        justifyContent: "space-between",
        alignItems: "center",
      }}
    >
      <span>
        <code>ReactNode</code> title
      </span>{" "}
      <span className="badge badge--primary">YAML</span>
    </div>
  }
>
  abc
</CodeBlock>

================================================================================
`;

exports[`space-around-equal-sign.mdx format 1`] = `
====================================options=====================================
parsers: ["mdx"]
                                                      printWidth: 80 (default) |
=====================================input======================================
Bug?

<Foo name ='value' />
<Foo name= 'value' />

=====================================output=====================================
Bug?

<Foo name="value" />
<Foo name="value" />

================================================================================
`;

exports[`spread.mdx format 1`] = `
====================================options=====================================
parsers: ["mdx"]
                                                      printWidth: 80 (default) |
=====================================input======================================
<C {...(a   .b.c)} />

<C {...   props} />

<C {...call(   a, b)} />

<C { ...(a   .b.c) } />

<C {...(a   .b.c)}>text</C>

<C {...a  .b.c} />

<C {/* comment */ ...(a   .b.c)} />

<C a="1" {...(a   .b.c)} b={2} />

<C {...(a,b   +c)} />

<C {...functionCallWithVeryLongName(   argumentNumberOne, argumentNumberTwo, argumentNumberThree)} />

<C {...{   longPropertyNameOne: valueNumberOne, longPropertyNameTwo: valueNumberTwo, longPropertyNameThree: valueNumberThree}} />

<C {...{
  a: 1, b: 2 }} />

a <b {...c} /> d

- item
  <C {...(a   .b.c)} />

=====================================output=====================================
<C {...a.b.c} />

<C {...props} />

<C {...call(a, b)} />

<C {...a.b.c} />

<C {...a.b.c}>text</C>

<C {...a.b.c} />

<C {/* comment */ ...a.b.c} />

<C a="1" {...a.b.c} b={2} />

<C {...(a, b + c)} />

<C
  {...functionCallWithVeryLongName(
    argumentNumberOne,
    argumentNumberTwo,
    argumentNumberThree,
  )}
/>

<C
  {...{
    longPropertyNameOne: valueNumberOne,
    longPropertyNameTwo: valueNumberTwo,
    longPropertyNameThree: valueNumberThree,
  }}
/>

<C
  {...{
    a: 1,
    b: 2,
  }}
/>

a <b {...c} /> d

- item
  <C {...a.b.c} />

================================================================================
`;

exports[`spread-attribute-error-recovery.mdx format 1`] = `
====================================options=====================================
parsers: ["mdx"]
                                                      printWidth: 80 (default) |
=====================================input======================================
{/* These are not valid, but the parser won't throw during parse. */}

<a {...b, ...another} />
<a {   ...   b, ...   another   } />

<a {b=c}={} d />
<a {    b=c}={  } d />

=====================================output=====================================
{/* These are not valid, but the parser won't throw during parse. */}

<a {...b, ...another} />
<a {   ...   b, ...   another   } />

<a {b=c}={} d />
<a {    b=c}={  } d />

================================================================================
`;
